# plant-ai

./: .gitignore  README.md  pyproject.toml
plantai/: main.py
plantai/SendOscSignal/: SendOscSignalThread.py
plantai/interface/: MainWindow.py  mainwindow.ui
tests/: oscReceiver.py
