[tool.poetry]
name = "plantai"
version = "0.1.0"
description = ""
authors = ["sandbenders <fabrizio@fabriziopoltronieri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
